--- a/index.html
+++ b/index.html
@@ -4,11 +4,136 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>make Own responsive site</title>
   </head>
   <body>
+    <header class="header">
+      <div class="header__title-box">
+        <h1>indigo</h1>
+        <span><i class="fas fa-bars fa-2x"></i></span>
+      </div>
+      <ul class="header__menu-list">
+        <li><a href="">home</a></li>
+        <li><a href="">we are</a></li>
+        <li><a href="">work</a></li>
+        <li><a href="">blog</a></li>
+        <li><a href="">contact us</a></li>
+      </ul>
+    </header>
+
+    <section class="logo">
+      <!-- self challenge : make logo to auto slide to right and display left item count ex(1/6)-->
+      <img src="image/slide01.jpg" alt="" class="logo__image" />
+    </section>
+
+    <main class="main">
+      <section class="intro">
+        <h2>we are</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum
+          tempora omnis laboriosam! Natus nesciunt perspiciatis distinctio illo
+          aspernatur, tenetur, beatae temporibus minima tempora maiores iure
+          ullam ducimus odio in velit?
+        </p>
+      </section>
+
+      <section class="goal">
+        <ul class="goal__list">
+          <li class="goal__item">
+            <span><i class="fas fa-home fa-3x"></i></span>
+            <h4>home</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              nobis blanditiis assumenda? Amet dicta vitae aperiam sit sapiente
+              adipisci a tempora minima laudantium consequatur? Exercitationem
+              molestias eligendi explicabo eos animi.
+            </p>
+          </li>
+          <li class="goal__item">
+            <span><i class="fas fa-user-friends fa-3x"></i></span>
+            <h4>we are</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam
+              quasi, et rem porro numquam tempore deleniti quisquam! Eaque dolor
+              quis distinctio. Nihil dignissimos laboriosam assumenda sit
+              quaerat quis quidem. Fugit!
+            </p>
+          </li>
+          <li class="goal__item">
+            <span><i class="fas fa-briefcase fa-3x"></i></span>
+            <h4>work</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              maxime debitis optio ut cum autem cupiditate beatae accusamus
+              officia sapiente voluptate quo, expedita tempora impedit
+              laboriosam architecto asperiores error itaque?
+            </p>
+          </li>
+          <li class="goal__item">
+            <span><i class="fas fa-pencil-alt fa-3x"></i></span>
+            <h4>blog</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo
+              nostrum numquam animi dolorem corporis facere voluptate ad at
+              neque. Doloribus repellendus quis exercitationem earum rerum,
+              eligendi dolorem veniam ipsam facere!
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="sports">
+        <ul class="sports__list">
+          <li class="sports__item">
+            <img src="image/work01.jpg" alt="" class="sports__image" />
+            <div class="sports__tag">
+              <div class="sports__info-box">
+                <span class="sports__info-icon"
+                  ><i class="fas fa-running fa-2x"></i
+                ></span>
+                <div class="sports__info">
+                  <h4>Running</h4>
+                  <span>image/running</span>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="sports__item">
+            <img src="image/work02.jpg" alt="" class="sports__image" />
+          </li>
+          <li class="sports__item">
+            <img src="image/work03.jpg" alt="" class="sports__image" />
+          </li>
+          <li class="sports__item">
+            <img src="image/work04.jpg" alt="" class="sports__image" />
+          </li>
+          <li class="sports__item">
+            <img src="image/work05.jpg" alt="" class="sports__image" />
+          </li>
+          <li class="sports__item">
+            <img src="image/work06.jpg" alt="" class="sports__image" />
+          </li>
+          <li class="sports__item">
+            <img src="image/work07.jpg" alt="" class="sports__image" />
+          </li>
+          <li class="sports__item">
+            <img src="image/work08.jpg" alt="" class="sports__image" />
+          </li>
+        </ul>
+      </section>
+
+      <section class="blog">
+        <ul class="blog__list">
+          <li class="blog__item"><img src="" alt="" /></li>
+          <li class="blog__item"><img src="" alt="" /></li>
+          <li class="blog__item"><img src="" alt="" /></li>
+        </ul>
+      </section>
+
+      <footer class="footer"></footer>
+    </main>
     <script src=""></script>
     <script
       src="https://kit.fontawesome.com/12c3b3e85d.js"
